--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,7 +60,7 @@ $m3-violet-light-theme: matx.define-theme(
   )
 );
 
-@mixin theme-classes($theme) {
+@mixin themable-styles($theme) {
   .tonal {
     background-color: mat.get-theme-color($theme, secondary-container);
     color: mat.get-theme-color($theme, on-secondary-container);
@@ -78,29 +78,59 @@ $m3-violet-light-theme: matx.define-theme(
     scrollbar-width: thin;
     scrollbar-color: mat.get-theme-color($theme, secondary-container) transparent;
   }
+
+  // Button color variants
+  .secondary-button {
+    @include mat.button-color($theme, $color-variant: secondary);
+  }
+
+  .tertiary-button {
+    @include mat.button-color($theme, $color-variant: tertiary);
+  }
+
+  .warn-button {
+    @include mat.button-color($theme, $color-variant: error);
+  }
+
+  // Icon color variants
+  .primary-icon {
+    @include mat.icon-color($theme, $color-variant: primary);
+  }
+
+  .secondary-icon {
+    @include mat.icon-color($theme, $color-variant: secondary);
+  }
+
+  .tertiary-icon {
+    @include mat.icon-color($theme, $color-variant: tertiary);
+  }
+
+  .warn-icon {
+    @include mat.icon-color($theme, $color-variant: error);
+  }
 }
 
 html {
   @include mat.all-component-themes($m3-violet-dark-theme);
 
   &.violet-dark {
-    @include theme-classes($m3-violet-dark-theme);
+    @include themable-styles($m3-violet-dark-theme);
   }
 
   &.violet-light {
     @include mat.all-component-colors($m3-violet-light-theme);
-    @include theme-classes($m3-violet-light-theme);
+    @include themable-styles($m3-violet-light-theme);
   }
 
   @each $color, $palette in $palettes {
     &.#{$color}-dark {
       @include mat.all-component-colors(map-get($theme-map, "m3-#{$color}-dark-theme"));
-      @include theme-classes(map-get($theme-map, "m3-#{$color}-dark-theme"));
+      @include themable-styles(map-get($theme-map, "m3-#{$color}-dark-theme"));
     }
 
     &.#{$color}-light {
       @include mat.all-component-colors(map-get($theme-map, "m3-#{$color}-light-theme"));
-      @include theme-classes(map-get($theme-map, "m3-#{$color}-light-theme"));
+      @include themable-styles(map-get($theme-map, "m3-#{$color}-light-theme"));
     }
   }
 }
