migrate to material v18

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,20 +1,19 @@
 @use "@angular/material" as mat;
-@use "@angular/material-experimental" as matx;
 @use "sass:map";
 
 @include mat.core();
 
 $palettes: (
-  "red": matx.$m3-red-palette,
-  "green": matx.$m3-green-palette,
-  "blue": matx.$m3-blue-palette,
-  "yellow": matx.$m3-yellow-palette,
-  "cyan": matx.$m3-cyan-palette,
-  "magenta": matx.$m3-magenta-palette,
-  "orange": matx.$m3-orange-palette,
-  "chartreuse": matx.$m3-chartreuse-palette,
-  "azure": matx.$m3-azure-palette,
-  "rose": matx.$m3-rose-palette,
+  "red": mat.$red-palette,
+  "green": mat.$green-palette,
+  "blue": mat.$blue-palette,
+  "yellow": mat.$yellow-palette,
+  "cyan": mat.$cyan-palette,
+  "magenta": mat.$magenta-palette,
+  "orange": mat.$orange-palette,
+  "chartreuse": mat.$chartreuse-palette,
+  "azure": mat.$azure-palette,
+  "rose": mat.$rose-palette,
 );
 
 $theme-map: ();
@@ -28,7 +27,7 @@ $theme-map: ();
       $theme-map,
       (
         $theme-name:
-          matx.define-theme(
+          mat.define-theme(
             (
               color: (
                 theme-type: $theme,
@@ -42,11 +41,11 @@ $theme-map: ();
 }
 
 // default theme (dark)
-$m3-violet-dark-theme: matx.define-theme(
+$m3-violet-dark-theme: mat.define-theme(
   (
     color: (
       theme-type: dark,
-      primary: matx.$m3-violet-palette,
+      primary: mat.$violet-palette,
     ),
     // add density only for default theme config to avoid duplicated theming styles
     density:
@@ -57,11 +56,11 @@ $m3-violet-dark-theme: matx.define-theme(
 );
 
 // default light theme
-$m3-violet-light-theme: matx.define-theme(
+$m3-violet-light-theme: mat.define-theme(
   (
     color: (
       theme-type: light,
-      primary: matx.$m3-violet-palette,
+      primary: mat.$violet-palette,
     ),
   )
 );
